--- a/index.html
+++ b/index.html
@@ -9,19 +9,46 @@
 </head>
 
 <body>
-    <input id="search-input" type="text" value="">
-    <button id="search-button">Search</button>
-    <p id="pokemon-name"></p>
-    <p id="pokemon-id"></p>
-    <p id="weight"></p>
-    <p id="height"></p>
-    <p id="types"></p>
-    <p id="hp"></p>
-    <p id="attack"></p>
-    <p id="defense"></p>
-    <p id="special-attack"></p>
-    <p id="special-defense"></p>
-    <p id="speed"></p>
+    <input id="search-input" type="text" value="" required>
+    <span><button id="search-button">Search</button></span>
+    <div id="the-pokemon">
+        <span id="pokemon-name"></span>
+        <span id="pokemon-id"></span><br>
+        <div id="images"></div>
+        <span id="weight"></span>
+        <span id="height"></span>
+        <div id="types"></div>
+        <table>
+            <tr>
+                <th>Base</th>
+                <th>Stats</th>
+            </tr>
+            <tr>
+                <td>HP:</td>
+                <td id="hp"></td>
+            </tr>
+            <tr>
+                <td>Attack:</td>
+                <td id="attack"></td>
+            </tr>
+            <tr>
+                <td>Defense:</td>
+                <td id="defense"></td>
+            </tr>
+            <tr>
+                <td>Sp. Attack</td>
+                <td id="special-attack"></td>
+            </tr>
+            <tr>
+                <td>Sp. Defense</td>
+                <td id="special-defense"></td>
+            </tr>
+            <tr>
+                <td>Speed:</td>
+                <td id="speed"></td>
+            </tr>
+        </table>
+    </div>
 
     <script src="./script.js"></script>
 </body>
